[project]
name = "PyAddressBook"
version = "0.0.1"
authors = [
  { name="Michael MacMullen", email="voldgalf@protonmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
